--- a/MobSec/app/src/main/res/layout/signup.xml
+++ b/MobSec/app/src/main/res/layout/signup.xml
@@ -5,9 +5,28 @@
     android:orientation="vertical"
     android:gravity="center_vertical" >
 
+    <TextView
+    android:id="@+id/editTextUserName"
+    android:hint="User Name"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
+
+    <requestFocus />
+    </TextView>
+    <TextView
+        android:id="@+id/userEmail"
+        android:hint="Email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <requestFocus />
+    </TextView>
+
     <EditText
-        android:id="@+id/editTextUserName"
-        android:hint="User Name"
+        android:id="@+id/editTextEmergencyContact"
+        android:hint="Emergency Contact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
@@ -16,24 +35,34 @@
     </EditText>
 
     <EditText
+        android:id="@+id/Location"
+        android:hint="Location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+    </EditText>
+
+    <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="Secret Key"
         android:inputType="textPassword" />
 
     <EditText
         android:id="@+id/editTextConfirmPassword"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="Confirm Password"
+        android:hint="Confirm Secret Key"
         android:inputType="textPassword" />
 
     <Button
         android:id="@+id/buttonCreateAccount"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Create Account"
+        android:text="Update Details"
         android:layout_marginBottom="60dp" />
+
 
 </LinearLayout>
