--- a/MobSec/app/src/main/res/menu/menu_main.xml
+++ b/MobSec/app/src/main/res/menu/menu_main.xml
@@ -6,4 +6,10 @@
         android:enabled="false"
         />
 
+    <!--<item-->
+        <!--android:id="@+id/start_service"-->
+        <!--android:title="Start Monitoring"-->
+        <!--android:enabled="true"-->
+        <!--/>-->
+
 </menu>
