--- a/MobSec/app/src/main/res/layout/signup.xml
+++ b/MobSec/app/src/main/res/layout/signup.xml
@@ -44,6 +44,13 @@
     </EditText>
 
     <EditText
+        android:id="@+id/editTextOldPassword"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Old Secret Key"
+        android:inputType="textPassword"
+        android:visibility="invisible"/>
+    <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -63,6 +70,17 @@
         android:layout_height="wrap_content"
         android:text="Update Details"
         android:layout_marginBottom="60dp" />
+    <TextView
+        android:id="@+id/inst"
+        android:hint="Installed Apps"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
 
-
+        <requestFocus />
+    </TextView>
+    <Spinner
+        android:id="@+id/installedApps"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
